# raylib-bindings

./: .gitignore  .gitmodules  ChangeLog  LICENSE.txt  README.md  libraylib.3.7.0.dylib  libraylib.dylib  raylib-bindings.gemspec  raylib.rb  test.rb  test_basic_loop.rb
.github/workflows/: build_all.yml  build_linux_macos_windows.yml  linux.yml  linux_arm64.yml  linux_cross.yml  macos.yml  windows.yml
examples/: audio_music_stream.rb  audio_raw_stream.rb  audio_sound_loading.rb  basic_loop.rb  bitmap_font.rb  core_2d_camera.rb  core_3d_camera_first_person.rb  core_3d_split_screen.rb  core_automation_events.rb  core_drop_files.rb  core_loading_thread.rb  core_storage_values.rb  core_world_screen.rb  game_of_life_simple.rb  game_of_life_ui.rb  generate_heightmap_obj.rb  gui_controls.rb  lissajous_curve.rb  models_animation.rb  models_animation_blending.cpu.rb  models_animation_blending.gpu.rb  models_animation_lowlevelapi.rb  models_billboard.rb  models_box_collisions.rb  models_cubicmap.rb  models_first_person_maze.rb  models_geometric_shapes.rb  models_heightmap.rb  models_loading_gltf.rb  models_loading_m3d.rb  models_mesh_generation.rb  models_mesh_picking.rb  models_rlgl_solar_system.rb  models_waving_cubes.rb  models_yaw_pitch_roll.rb  particles_fireworks.rb  physics_demo.rb  procedural_texture.rb  raylib_opengl_interop.rb  raylib_with_tileson.rb  (+29 more)
examples/font/: README.md
examples/jpfont/: README.md  README_MaruMonica.txt
examples/map/: README.md  sampleMap.tmj
examples/util/: resource_path.rb  setup_dll.rb  setup_opengl_dll.rb
generator/: CMakeLists.txt  README.md  batch_generate.cmd  batch_generate.sh  batch_generate_mruby.sh  build_raylibparser_macos.sh  config_api.json  generate_config.py  generate_initial_define_mapping.py  generate_initial_mapping.cmd  generate_initial_mapping.sh  generate_mruby_raylib.py  generate_physac.py  generate_raygui.py  generate_raylib.py  generate_raymath.py  generate_rcamera.py  generate_rlgl.py  generate_schema_macos.sh  get_clang_python_bindings.cmd  physac_api.json  raygui_api.json  raylib_api.json  raylib_cindex_mapping.json  raylib_define_mapping.json  raylib_generator.py  raylib_generator_mruby.py  raylib_headers_list.json  raylib_parser.py  raymath_api.json  rcamera_api.json  rlgl_api.json
generator/schema/: rlgl_api.json
generator2/: generate_initial_cindex_mapping.py  generate_initial_mapping.sh  generate_raylib.py  raylib_cindex_mapping.json  raylib_define_mapping.json  raylib_parser.py
lib/: config.rb  libraylib.4.0.0.dylib  libraylib.400.dylib  libraylib.arm64.dylib  libraylib.dylib  libraylib.x86_64.dylib  mrb_raylib.c  physac.arm64.dylib  physac.dylib  physac.rb  physac.x86_64.dylib  raygui.arm64.dylib  raygui.dylib  raygui.rb  raygui.x86_64.dylib  raygui_helper.rb  raygui_main.rb  raylib.rb  raylib_helper.rb  raylib_main.rb  raymath.rb  rcamera.rb  rlgl.rb
mruby/: CMakeLists.txt  Makefile  Makefile.linux  Makefile.macos  Makefile.wasm  Makefile.windows  RubyRaylibRuntime.c  code_apitest.h  code_apitest.rb  code_mainloop.h  code_mainloop.rb  code_pacone.h  code_pacone.rb  mrb_raylib.c  mrb_test.c  wasm_build_libmrb.cmd  wasm_build_test.cmd  wasm_rebuild_mruby.cmd
mruby/mruby_script/: default.rb  emscripten.rb
mruby/test/: mrb_test.html  mrb_test.js  mrb_test.wasm
mruby/wasm/: CMakeLists.txt
physac_dll/: CMakeLists.txt  build_physac_linux.sh  build_physac_linux_cross.sh  build_physac_macos.sh  build_physac_windows.bat  physac.c
raygui_dll/: CMakeLists.txt  build_raygui_linux.sh  build_raygui_linux_cross.sh  build_raygui_macos.sh  build_raygui_windows.bat  raygui.c
raylib_dll/: Info.plist.in  build_raylib_linux.sh  build_raylib_linux_cross.sh  build_raylib_macos.sh  build_raylib_macos_framework.sh  build_raylib_macos_staticlib.sh  build_raylib_static_linux.sh  build_raylib_static_macos.sh  build_raylib_static_wasm.cmd  build_raylib_static_wasm.sh  build_raylib_static_windows.cmd  build_raylib_wasm.sh  build_raylib_windows.bat  load_via_framwork.rb  raylib_patch.diff
script/: build_gems.sh  check_syntax.cmd  examples_smoke_test.cmd  examples_smoke_test.rb  examples_smoke_test.sh  gems_build.cmd  gems_push.sh  generate_api_schema.cmd  generate_api_schema.sh  rebuild_libs_linux.sh  rebuild_libs_linux_cross.sh  rebuild_libs_macos.sh  rebuild_libs_windows.cmd  tmp_rebuild_linux_cross.sh  wsl_rebuild_linux_cross.sh
